added sections for endpoints in swagger
